<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".CreateAccount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="408dp"
            android:layout_height="735dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtHeaderCreateAccount"
                android:layout_width="307dp"
                android:layout_height="96dp"
                android:gravity="center"
                android:text="@string/txtBtnCreateAccount"
                android:textColor="@color/colorFont"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:autoText="true" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:gravity="center_vertical"
                android:text="@string/txtEmail"
                android:textColor="@color/colorFont"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.637"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHeaderCreateAccount" />

            <TextView
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/txtPass"
                android:textColor="@color/colorFont"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

            <EditText
                android:id="@+id/editTxtEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/img_email"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hntEmail"
                android:importantForAutofill="no"

                android:inputType="textEmailAddress"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editTxtPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/img_pass"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hntPass"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPass"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTxtRepeatPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/img_pass"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hntRepeatPass"
                android:importantForAutofill="no"
                android:inputType="textPassword"

                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRepeatPass"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/txtPassDesc"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:gravity="start|end"
                android:text="@string/descPass"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtRepeatPass" />

            <TextView
                android:id="@+id/txtRepeatPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/txtRepeatPass"
                android:textColor="@color/colorFont"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtPass" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:enabled="false"
                android:text="@string/txtBtnNext"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassDesc" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
